# sakila-company

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
compose/dagster/: dagster.yaml  workspace.yaml
docs/assets/: sakila-company-architecture.drawio
sakila_etl/: .dockerignore  .pylintrc  Dockerfile_base  README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml
sakila_etl/sakila_etl/: __init__.py  dbt_asset.py  dbt_assets.py  dlt_assets.py
sakila_etl/sakila_etl/dbt_project/: .dockerignore  .sqlfluff  dbt_project.yml
sakila_etl/sakila_etl/dbt_project/models/staging/pagila/: _pagila__models.yml  _pagila__sources.yml  base_pagila__address.sql  base_pagila__category.sql  base_pagila__city.sql  base_pagila__country.sql  base_pagila__film.sql  base_pagila__language.sql  stg_pagila__actor.sql  stg_pagila__address.sql  stg_pagila__customer.sql  stg_pagila__film.sql  stg_pagila__film__special_features.sql  stg_pagila__film_actor.sql  stg_pagila__film_category.sql  stg_pagila__inventory.sql  stg_pagila__payment.sql  stg_pagila__rental.sql  stg_pagila__staff.sql  stg_pagila__store.sql
sakila_etl/sakila_etl/dbt_project/models/warehouse/: _warehouse__models.yml  brd_film_actor.sql  dim_actor.sql  dim_customer.sql  dim_date.sql  dim_film.sql  dim_staff.sql  dim_store.sql  dim_store_inventory.sql  fct_daily_customer_registered.sql  fct_film_rented.sql  fct_other_payment.sql
sakila_etl/sakila_etl/dlt_project/: sources.py  utils.py
sakila_etl/sakila_etl/dlt_project/connectors/sql_database/: __init__.py
scripts/: init.sh
(+6 files in other folders)
